--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "harsh-gpt",
   "version": "1.0.0",
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.0"
+    "@supabase/supabase-js": "^2.39.0",
+    "node-fetch": "^2.7.0"
   },
   "engines": {
     "node": "18.x"
