--- a/vercel.json
+++ b/vercel.json
@@ -1,30 +1,31 @@
 {
   "version": 2,
+  "name": "harsh-gpt",
   "cleanUrls": true,
-  "rewrites": [
+  "routes": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
     },
     {
-      "source": "/manifest.json",
-      "destination": "/public/manifest.json"
+      "src": "/manifest.json",
+      "dest": "/public/manifest.json"
     },
     {
-      "source": "/sw.js",
-      "destination": "/public/sw.js"
+      "src": "/sw.js",
+      "dest": "/public/sw.js"
     },
     {
-      "source": "/icon-(.*).png",
-      "destination": "/public/icon-$1.png"
+      "src": "/icon-192.png",
+      "dest": "/public/icon-192.png"
     },
     {
-      "source": "/",
-      "destination": "/index.html"
+      "src": "/icon-512.png",
+      "dest": "/public/icon-512.png"
     },
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ]
 }
