--- a/vercel.json
+++ b/vercel.json
@@ -1,31 +1,25 @@
 {
   "version": 2,
-  "name": "harsh-gpt",
-  "cleanUrls": true,
-  "routes": [
+  "rewrites": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
     },
     {
-      "src": "/manifest.json",
-      "dest": "/public/manifest.json"
+      "source": "/manifest.json",
+      "destination": "/public/manifest.json"
     },
     {
-      "src": "/sw.js",
-      "dest": "/public/sw.js"
+      "source": "/sw.js",
+      "destination": "/public/sw.js"
     },
     {
-      "src": "/icon-192.png",
-      "dest": "/public/icon-192.png"
+      "source": "/icon-(.*).png",
+      "destination": "/public/icon-$1.png"
     },
     {
-      "src": "/icon-512.png",
-      "dest": "/public/icon-512.png"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
